# file2ai

./: .coverage  .coveragerc  .env.example  .gitignore  .python-version  CONTRIBUTING.md  README.md  create_test_files.py  create_test_html.py  create_test_pdf.py  create_test_ppt.py  file2ai.py  file2ai_test.sh  git2txt.py  git_cleanup.sh  pyproject.toml  pytest.ini  requirements.txt  sample.docx  setup_progress.py  test.html  test_file2ai.py  test_file2ai_extension.py  test_git2txt.py  test_git_extension.py  test_patterns.py  test_script.sh  test_url_parsing.py  test_utils.py  test_weasyprint.py  todo.txt  utils.py  verify_setup.py  web.py  web_test.sh
examples/: README.md  demo.sh
examples/sample_project/: main.py  utils.py
examples/test_files/: sample.docx  sample.pptx  sample.txt  sample.xlsx
file2ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  main.js  styles.css
frontend/file2ai-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/file2ai-frontend/src/: App.tsx  main.tsx
frontend/file2ai-frontend/src/components/: File2AI.tsx
frontend/lib/: browser-bundle.js  minimatch.js  minimatch.min.js
frontend/static/: index.html
frontend/static/assets/: index-Crul7QVg.css  index-LmJBN4A2.js
launchers/: git2txt.bat  git2txt.sh
templates/: default.docx  index.html  upload.html
tests/: __init__.py  conftest.py  create_test_doc.py  create_test_excel.py  create_test_html.py  create_test_pdf.py  create_test_ppt.py  test.docx  test_file2ai.py  test_file2ai_extension.py  test_git.py  test_script.sh  test_script.sh.bak  test_utils.py  test_weasyprint.py  test_web.py
tests/backup/: create_test_doc.py  create_test_excel.py  create_test_pdf.py  test.docx  test.html  test.pptx  test.xlsx
