[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file2ai"
version = "1.0.1"
description = "A comprehensive tool for file conversion, text extraction, and AI processing"
authors = [
    { name = "Michael Jabbour", email = "michael@jabbour.dev" }
]
license = { file = "LICENSE" }
keywords = ["git", "export", "text"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "gitpython",
    "python-docx",
    "openpyxl"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock"
]

[project.urls]
"Source Code" = "https://github.com/michaeljabbour/file2ai"

[tool.setuptools]
# We only have a single Python module called 'file2ai.py'
py-modules = ["file2ai"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
