[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file2ai"
version = "1.0.1"
description = "A comprehensive tool for file conversion, text extraction, and AI processing"
requires-python = ">=3.8"
authors = [
    { name = "Michael Jabbour", email = "michael@jabbour.dev" }
]
license = { file = "LICENSE" }
keywords = ["git", "export", "text"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    # Core dependencies
    "gitpython",
    "python-docx",
    "openpyxl",
    "weasyprint",
    "beautifulsoup4",
    "fpdf>=1.7.2",
    "python-pptx>=0.6.21",
    "requests>=2.31.0",
    
    # Web dependencies
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    
    # Test dependencies
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock",
    "pytest-timeout>=2.1.0",
    
    # Development dependencies
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[project.urls]
"Source Code" = "https://github.com/michaeljabbour/file2ai"

# Document conversion is handled by pure Python packages:
# - python-docx: Word documents
# - openpyxl: Excel files
# - python-pptx: PowerPoint files
# - weasyprint: HTML/PDF conversion

[tool.setuptools]
# We only have a single Python module called 'file2ai.py'
py-modules = ["file2ai"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
norecursedirs = ["exports", "logs", "venv", "__pycache__"]
